--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- SEO Meta Tags -->
+  <title>FarruXbek Raxmonov</title>
+  <meta name="description" content="Welcome to FarruXbek Raxmonov's React Project" />
+  <meta name="keywords" content="Raxmonov, raxmonovrx, FarruXbek Raxmonov" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="FarruXbek Raxmonov" />
+  <meta property="og:description" content="Welcome to FarruXbek Raxmonov's React Project" />
+  <meta property="og:image" content="/icon.svg" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="/icon.svg" />
+  <meta name="twitter:title" content="FarruXbek Raxmonov" />
+  <meta name="twitter:description" content="Welcome to FarruXbek Raxmonov's React Project" />
+  <meta name="twitter:image" content="/icon.svg" />
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
