Add main layout and custom cursor; update styles and dependencies

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <meta name="twitter:description" content="Welcome to FarruXbek Raxmonov's React Project" />
   <meta name="twitter:image" content="/icon.svg" />
 
+
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
