Add web app manifest and update header logo; adjust text styles in MainAbout

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
 
+  <!-- Manifest -->
+  <link rel="manifest" href="/public/manifest.json" />
+
 </head>
 
 <body>
